# docs/swagger.yaml
@@ -69,6 +69,35 @@ paths:
       summary: 分页获取ping的记录信息
       tags:
       - ping
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: 账号密码登录(测试)
+      operationId: user-login
+      parameters:
+      - description: any string
+        in: query
+        name: username
+        required: true
+        type: string
+      - description: any string
+        in: query
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code": 200, "expire": "2019-08-07T12:45:48+08:00", "token":
+            ".eyJleHAiOjE1NjUxNTMxNDgsImlkIjoiYWRtaW4iLCJvcmlnX2lhdCI6MTU2NTE0OTU0OH0.-zvzHvbg0A"
+            }'
+          schema:
+            type: string
+      summary: 用户登录，获取token
+      tags:
+      - user
 securityDefinitions:
   JWT:
     in: header
